--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs-extra": "^7.0.0",
     "inquirer": "^6.0.0",
     "prompt": "^1.0.0",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "uuid": "^3.3.2"
   }
 }
